# django-chat

./: .gitignore  pyproject.toml
chat/: admin.py  forms.py  models.py  urls.py  views.py
chat/migrations/: 0001_initial.py
chat/templates/: base.html
chat/templates/chat/: index.html  login.html  mainpage.html  register.html  room.html
mysite/: asgi.py  settings.py  urls.py
